# sokol-msdf

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  main.c  sokol.h  sokol_osx.m  text.glsl  text.h
msdf_bazel/: BUILD.bazel  generate.cpp
